--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
+   <!--Title of the tab-->
     <title>website</title>
 </head>
 
 <body>
+    <!--Header has a pseuddo class-->
     <div class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
         <div>
