--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
     <!--Header has a pseuddo class-->
     <div class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
+        <div> <!--it divides the documents into seprate sections-->
             <ul>
                 <li>
+                    <!-- adding the tabs on the second headers-->
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
                 </li>
                 <li>
@@ -26,8 +27,8 @@
             </ul>
         </div>
     </div>
-    <div class="hero"></div>
-    <div class="content">
+    <div class="hero"></div> <!--main banner-->
+    <div class="content"> 
         <div class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
@@ -76,7 +77,7 @@
     <div class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
-            &copy; 2019 Horiseon Social Solution Services, Inc.
+         <!--copyright sign-->   &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
     </div>
 </body>
