updated my readme and commented on my css and html

--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en-us">
 
-<head>
+<head> <!--represents metadata for the document -->
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>website</title>
 </head>
 
 <body>
-    <header class="header">
+    <header class="header"> <!--represnets introductory to a root element-->
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <nav>
-            <ul>
+        <nav> <!--nav prepresents navigation bar for the webpage -->
+            <ul> 
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
                 </li>
@@ -24,15 +24,17 @@
             </ul>
         </nav>
     </header>
-    <figure class="hero"></figure>
-    <section class="content"> 
+
+    <figure class="hero"></figure> <!--image to the main webpage-->
+    
+    <section class="content"> <!--a section of context is a thematic grouping of content-->
         <article class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" alt="Search Engine Optimization" class="float-left" />
+            <img src="./assets/images/search-engine-optimization.jpg" alt="Search Engine Optimization"  class="float-left" /> <!-- attribute describes the image for screen readers-->
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
-        </article>
+        </article> <!--it distributes indepentent from the rest of the webpage-->
         <article id="online-reputation-management" class="online-reputation-management">
             <img src="./assets/images/online-reputation-management.jpg" alt="Online Reputation Management" class="float-right" />
             <h2>Online Reputation Management</h2>
@@ -48,7 +50,7 @@
             </p>
         </article>
     </section>
-    <aside class="benefits">
+    <aside class="benefits"> <!--its the sidebar -->
         <article class="benefit-lead">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="Lead Generation" /> 
@@ -71,7 +73,7 @@
             </p>
         </article>
     </aside>
-    <footer class="footer">
+    <footer class="footer"> <!--footer typically contains information about its section such as who wrote it-->
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
           &copy; 2019 Horiseon Social Solution Services, Inc.
